# package-version-server

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: fetcher.rs  main.rs  parser.rs
