[package]
name = "node_package_version_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
reqwest = { version = "0.11", features = ["json"] }
time-format = "1.1.2"
time = {version = "0.3.36", features = ["parsing"]}
chrono-humanize = "0.2.3"
chrono = "0.4.38"
tree-sitter-json = "0.21.0"
tree-sitter = "0.22.6"
urlencoding = "2.1.3"
