[package]
name = "package-version-server"
version = "0.0.10"
edition = "2021"
authors = ["Zed Team <hi@zed.dev>"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
reqwest = { version = "0.11", features = ["json"] }
time = { version = "0.3.36", features = ["parsing"] }
chrono-humanize = "0.2.3"
chrono = "0.4.38"
tree-sitter-json = "0.21.0"
tree-sitter = "0.22.6"
urlencoding = "2.1.3"
anyhow = "1.0"
itertools = "0.5"
semver_rs = "0.2.0"

[profile.release]
lto = "fat"
codegen-units = 1
